--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
+    flex: auto;
 }
-
 
 #vs {
     display: none;
@@ -10,7 +11,6 @@ body {
 #fs {
     display: none;
 }
-
 
 #ui {
     width: 50%;
