--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     flex: auto;
+    gap: 0.5rem;
+    background-color: rgb(59, 67, 81);
 }
 
 #vs {
@@ -16,10 +18,27 @@ body {
     width: 50%;
 }
 
+input {
+    border-radius: 0.5rem;
+}
+
+select {
+    background-color: rgb(85, 117, 145);
+    appearance: base-select;
+
+    &::picker(select) {
+        appearance: base-select;
+    }
+}
+
+canvas {
+    border-radius: 0.5rem;
+}
 .container {
+    color: aliceblue;
     padding: 3%;
     border-radius: 0.5rem;
-    background-color: rgb(153, 153, 153);
+    background-color: rgb(21, 100, 118);
     display: flex;
     flex-direction: column;
     width: 10rem;
